syntax = "proto3";

package info.scce.cincocloud.proto;

option java_multiple_files = false;
option java_generic_services = true;
option java_outer_classname = "CincoCloudProtos";

message BuildJobStatus {
    uint64 jobId = 1;
    enum Status {
        PENDING = 0;
        BUILDING = 1;
        FINISHED_WITH_SUCCESS = 2;
        FINISHED_WITH_FAILURE = 3;
        ABORTED = 4;
    }
    Status status = 2;
}

message GetGitInformationRequest {
    uint64 projectId = 1;
}

message GetGitInformationReply {
    uint64 projectId = 1;
    enum Type {
        NONE = 0;
        BASIC = 1;
    }
    Type type = 2;
    string repositoryUrl = 3;
    string username = 4;
    string password = 5;
    string branch = 6;
    string genSubdirectory = 7;
}

message Void {}

message BuildJobLogMessage {
    uint64 projectId = 1;
    uint64 jobId = 2;
    repeated string logMessages = 3;
}

message Empty {}

service MainService {

    rpc SetBuildJobStatus (BuildJobStatus) returns (BuildJobStatus) {
    }

    rpc GetGitInformation (GetGitInformationRequest) returns (GetGitInformationReply) {
    }

    rpc SendBuildJobLogMessage (BuildJobLogMessage) returns (Empty) {
    }
}